@@ -4,6 +4,7 @@
 #       8-Jul-2019 jdw templatize
 #       9-Jul-2019 jdw add publish jobs
 #      21-Jul-2019 jdw update to Py38
+#       9-Dec-2024 dwp update to py310
 #
 name: $(BuildDefinitionName)_$(Date:yyyyMMdd)$(Rev:.rr)
 
@@ -24,21 +25,21 @@ schedules:
 
 jobs:
   - template: azure-template-tox-job.yml
-    parameters: { tox: "format_pep8", python: "3.9", os: "linux" }
+    parameters: { tox: "format_pep8", python: "3.10", os: "linux" }
   - template: azure-template-tox-job.yml
-    parameters: { tox: "lint_pylint", python: "3.9", os: "linux" }
+    parameters: { tox: "lint_pylint", python: "3.10", os: "linux" }
   - template: azure-template-tox-job.yml
-    parameters: { tox: "test_coverage", python: "3.9", os: "linux" }
+    parameters: { tox: "test_coverage", python: "3.10", os: "linux" }
     #
   - template: azure-template-tox-job.yml
-    parameters: { tox: "py39", python: "3.9", os: "linux" }
+    parameters: { tox: "py310", python: "3.10", os: "linux" }
   #
   - template: azure-template-tox-job.yml
-    parameters: { tox: "py39", python: "3.9", os: "macos" }
+    parameters: { tox: "py310", python: "3.10", os: "macos" }
   #
   - template: azure-template-publish-job.yml
-    parameters: { tox: "py39", python: "3.9", os: "macos" }
+    parameters: { tox: "py310", python: "3.10", os: "macos" }
   - template: azure-template-publish-job.yml
-    parameters: { tox: "py39", python: "3.9", os: "linux" }
+    parameters: { tox: "py310", python: "3.10", os: "linux" }
   #
   #
